--- a/users/templates/sign_in.html
+++ b/users/templates/sign_in.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sign in</title>
+</head>
 <body>
-<p>Войти</p>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
